--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,11 @@
     />
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
-    <title>Task 2</title>
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    />
+    <title>Task:02 Undo-redo</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
